--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,14 @@
 *{
   margin: 0;
   padding: 0;
-  /* box-sizing: border-box; */
   font-family: "Montserrat", sans-serif;
 }
 
 body{
   display: flex;
-  /* align-items: center;
-  justify-content: center; */
   min-height: 100vh;
-  background-color: blanchedalmond;
+  background-color: #A6AEBF;
+  margin: 0;
 }
 
 .container{
@@ -21,57 +19,127 @@ body{
   align-items: center;
   justify-content: center;
   width: 100vw;
-  /* border: 1px solid black; */
-  background: rgba(255, 255, 255, 0.6);
 }
 
 .header{
   display: flex;
-  width: 97%;
+  width: 100%;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem;
+  /* padding: 0.5rem; */
+  background: rgba(0, 0, 0, 0.2);
 }
 
-.navbar{
-  margin-left: 35rem;
+.header .logo{
+  padding-left: 2rem;
+  flex: 1;
+}
+
+.header .navbar{
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 80vh;
-  justify-content: space-between;
+  width: 100%;
+  justify-content: space-around;
   list-style: none;
   font-size: 1.25rem;
 }
 
-.navbar .nav-item {
-  padding: 0.5rem;
+.header .navbar .nav-item {
+  display: flex;
+  align-items: center;
+  height: 3.5rem;
+  padding: 0.5rem 1.5rem;
+  margin: 0 0.5rem;
   cursor: pointer;
   transition: 0.4s ease; /* Add transition here */
 }
 
-.navbar .nav-item a {
+.header .navbar .nav-item a {
   text-decoration: none;
   color: black; 
   font-weight: 550;
 }
 
-.navbar .nav-item:hover {
-  /* background: rgba(0, 0, 0, 0.1); */
+.header .navbar .nav-item:hover {
   margin: 0 1.5rem;
 }
 
-.header .menu-btn{
+.header .menu{
 
+}
+
+/* .header .menu-btn{
   height: 2.5rem;
   width: 3rem;
   border-radius: 20px;
   background: transparent;
   border: none;
   cursor: pointer;
+  margin: 0 2rem;
+} */
+
+/* .header .menu-btn:hover{
+  background: rgba(0, 0, 0, 0.1);
+} */
+
+.content{
+  display: flex;
+  flex-direction: row;
+  width: 95%;
+  /* flex-wrap: wrap; */
+  margin-top: 2rem;
 }
 
-.header .menu-btn:hover{
-  background: rgba(0, 0, 0, 0.1);
+.content .profile-details{
+  padding: 0 0.5rem;
+}
+
+.content .main-photo .profilePic{
+  width: 20rem;
+  height: auto;
+}
+
+.content .introduction{
+  margin-left: 3rem;
+}
+
+.content .introduction .intro{
+  font-size: 1rem;
+  margin: 1rem 0;
+  text-align: justify;
+  text-indent: 20px;
+}
+
+
+
+
+/* Media Queries */
+@media (max-width: 820px){
+  .header{
+    /* display: none; */
+    flex-direction: column;
+  }
+
+  .header .navbar{
+    /* display: none; */
+    flex-direction: column;
+  }
+
+  .header .navbar .nav-item:hover {
+    margin: 0.5rem 0;
+    padding: 0.5rem 0;
+  }
+
+  .content{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 95%;
+  }
+
+  .content .introduction{
+    margin: 2rem 1rem 0 0;
+  }
 }
